--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.7",
     "express": "^4.17.3",
     "lodash": "^4.17.21",
-    "mongoose": "^6.3.1"
+    "mongoose": "^6.3.1",
+    "request": "^2.88.2"
   }
 }
